# kodi_scripts

./: .envrc  .pre-commit-config.yaml  .pylintrc  README.md  fan_control.py  pyproject.toml
src/: fan_control-process.sh  fan_control.py
