[project]
name = "kodi-scripts"
version = "0.1.0"
description = "Useful scripts for Kodi/LibreELEC"
authors = [
    {name = "Augusto Morais",email = "augusto@morais.io"}
]
license = {text = "GNU"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"

[tool.black]
line-length = 98

[tool.ruff]
fix = true
line-length = 98

[tool.ruff.lint]
select = ["D", "E", "F", "W", "I", "UP", "G"]
ignore = [
  "D100",  # Missing docstring in public module
  "D101",  # Missing docstring in public class
  "D102",  # Missing docstring in public method
  "D103",  # Missing docstring in public function
  "D104",  # Missing docstring in public package
  "D105",  # Missing docstring in magic method
  "D107",  # Missing docstring in `__init__`
  "E501",  # line too long
]
ignore-init-module-imports = true

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
